// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`office income receipt — layout snapshot & orientation parity > BN layout is stable (snapshot) 1`] = `
"
  <div style="position:relative;font-family:'Noto Sans Bengali','Hind Siliguri','SolaimanLipi',sans-serif;color:#111;padding:18px 22px;" data-receipt-copy="কৃষকের কপি">
    
    <div style="position:relative;z-index:1;"></div>
    <div style="text-align:center;position:relative;z-index:1;">
      <div style="height:60px;display:flex;align-items:center;justify-content:center;font-size:18px;font-weight:700;color:#111;"></div>
      <div style="font-size:18px;font-weight:700;margin-top:2px;">সেচ চার্জ ও বিবিধ আদায় রশিদ</div>
      
      <div style="display:inline-block;border:1px solid #111;padding:2px 14px;margin-top:6px;font-size:13px;">কৃষকের কপি</div>
    </div>

    <div style="display:flex;justify-content:space-between;margin-top:16px;font-size:13px;">
      <div>
        <div>রশিদ নং: RCP-২০২৬-০৬-০০০৯</div>
        <div>আদায়ের তথ্য: ভাঙারি</div>
      </div>
      <div style="text-align:right;">
        <div>সংগৃহীত তারিখ: Jun 16, 2026</div>
      </div>
    </div>

    <table style="width:100%;border:1px solid #111;border-collapse:collapse;margin-top:8px;font-size:13px;">
      
    <tr>
      <td style="padding:4px 8px;vertical-align:top;width:38%;color:#111;word-break:break-word;overflow-wrap:anywhere;white-space:pre-line;line-height:1.35;">কৃষকের নাম ও আইডি/মালিকের নাম ও আইডি:</td>
      <td style="padding:4px 8px;vertical-align:top;color:#111;word-break:break-word;overflow-wrap:anywhere;white-space:pre-line;line-height:1.35;">অফিস আয়</td>
    </tr>
    <tr>
      <td style="padding:4px 8px;vertical-align:top;width:38%;color:#111;word-break:break-word;overflow-wrap:anywhere;white-space:pre-line;line-height:1.35;">গ্রাম/মহল্লা/মোবাইল নং:</td>
      <td style="padding:4px 8px;vertical-align:top;color:#111;word-break:break-word;overflow-wrap:anywhere;white-space:pre-line;line-height:1.35;">— / 01700000000</td>
    </tr>
    <tr>
      <td style="padding:4px 8px;vertical-align:top;width:38%;color:#111;word-break:break-word;overflow-wrap:anywhere;white-space:pre-line;line-height:1.35;">পিতার/স্বামীর নাম:</td>
      <td style="padding:4px 8px;vertical-align:top;color:#111;word-break:break-word;overflow-wrap:anywhere;white-space:pre-line;line-height:1.35;">—</td>
    </tr>
    <tr>
      <td style="padding:4px 8px;vertical-align:top;width:38%;color:#111;word-break:break-word;overflow-wrap:anywhere;white-space:pre-line;line-height:1.35;">মৌজা / জমির পরিমান:</td>
      <td style="padding:4px 8px;vertical-align:top;color:#111;word-break:break-word;overflow-wrap:anywhere;white-space:pre-line;line-height:1.35;">N/A</td>
    </tr>
    <tr>
      <td style="padding:4px 8px;vertical-align:top;width:38%;color:#111;word-break:break-word;overflow-wrap:anywhere;white-space:pre-line;line-height:1.35;">জমির মালিক:</td>
      <td style="padding:4px 8px;vertical-align:top;color:#111;word-break:break-word;overflow-wrap:anywhere;white-space:pre-line;line-height:1.35;">N/A</td>
    </tr>
    <tr>
      <td style="padding:4px 8px;vertical-align:top;width:38%;color:#111;word-break:break-word;overflow-wrap:anywhere;white-space:pre-line;line-height:1.35;">মোট আদায়ের পরিমাণ:</td>
      <td style="padding:4px 8px;vertical-align:top;color:#111;word-break:break-word;overflow-wrap:anywhere;white-space:pre-line;line-height:1.35;">1,500.00 (এক হাজার পাঁচ শত টাকা)</td>
    </tr>
    <tr>
      <td style="padding:4px 8px;vertical-align:top;width:38%;color:#111;word-break:break-word;overflow-wrap:anywhere;white-space:pre-line;line-height:1.35;">রিমার্ক/নোট:</td>
      <td style="padding:4px 8px;vertical-align:top;color:#111;word-break:break-word;overflow-wrap:anywhere;white-space:pre-line;line-height:1.35;">ভাঙারি বিক্রি</td>
    </tr>
    </table>

    <div style="display:flex;justify-content:space-between;align-items:flex-end;margin-top:38px;font-size:13px;gap:12px;">
      <div style="text-align:left;">
        <div style="border-top:0;padding-top:0;">সদস্যের স্বাক্ষর</div>
        <div style="margin-top:18px;font-weight:600;">অফিস আয়</div>
      </div>
      
      <div style="text-align:right;">
        <div>আদায়কারীর স্বাক্ষর</div>
        <div style="margin-top:30px;border-top:1px solid #111;width:140px;height:1px;display:inline-block;" data-sig="placeholder"></div>
      </div>
    </div>
  </div>"
`;

exports[`office income receipt — layout snapshot & orientation parity > EN layout is stable (snapshot) 1`] = `
"
  <div style="position:relative;font-family:'Inter','Helvetica','Arial',sans-serif;color:#111;padding:18px 22px;" data-receipt-copy="Farmer Copy">
    
    <div style="position:relative;z-index:1;"></div>
    <div style="text-align:center;position:relative;z-index:1;">
      <div style="height:60px;display:flex;align-items:center;justify-content:center;font-size:18px;font-weight:700;color:#111;"></div>
      <div style="font-size:18px;font-weight:700;margin-top:2px;">Irrigation & Misc. Collection Receipt</div>
      
      <div style="display:inline-block;border:1px solid #111;padding:2px 14px;margin-top:6px;font-size:13px;">Farmer Copy</div>
    </div>

    <div style="display:flex;justify-content:space-between;margin-top:16px;font-size:13px;">
      <div>
        <div>Receipt No: RCP-2026-06-0009</div>
        <div>Collection type: ভাঙারি</div>
      </div>
      <div style="text-align:right;">
        <div>Collected on: Jun 16, 2026</div>
      </div>
    </div>

    <table style="width:100%;border:1px solid #111;border-collapse:collapse;margin-top:8px;font-size:13px;">
      
    <tr>
      <td style="padding:4px 8px;vertical-align:top;width:38%;color:#111;word-break:break-word;overflow-wrap:anywhere;white-space:pre-line;line-height:1.35;">Farmer/Owner name & ID:</td>
      <td style="padding:4px 8px;vertical-align:top;color:#111;word-break:break-word;overflow-wrap:anywhere;white-space:pre-line;line-height:1.35;">অফিস আয়</td>
    </tr>
    <tr>
      <td style="padding:4px 8px;vertical-align:top;width:38%;color:#111;word-break:break-word;overflow-wrap:anywhere;white-space:pre-line;line-height:1.35;">Village / Union / Mobile:</td>
      <td style="padding:4px 8px;vertical-align:top;color:#111;word-break:break-word;overflow-wrap:anywhere;white-space:pre-line;line-height:1.35;">— / 01700000000</td>
    </tr>
    <tr>
      <td style="padding:4px 8px;vertical-align:top;width:38%;color:#111;word-break:break-word;overflow-wrap:anywhere;white-space:pre-line;line-height:1.35;">Father/Husband:</td>
      <td style="padding:4px 8px;vertical-align:top;color:#111;word-break:break-word;overflow-wrap:anywhere;white-space:pre-line;line-height:1.35;">—</td>
    </tr>
    <tr>
      <td style="padding:4px 8px;vertical-align:top;width:38%;color:#111;word-break:break-word;overflow-wrap:anywhere;white-space:pre-line;line-height:1.35;">Mouza / Land size:</td>
      <td style="padding:4px 8px;vertical-align:top;color:#111;word-break:break-word;overflow-wrap:anywhere;white-space:pre-line;line-height:1.35;">N/A</td>
    </tr>
    <tr>
      <td style="padding:4px 8px;vertical-align:top;width:38%;color:#111;word-break:break-word;overflow-wrap:anywhere;white-space:pre-line;line-height:1.35;">Land owner:</td>
      <td style="padding:4px 8px;vertical-align:top;color:#111;word-break:break-word;overflow-wrap:anywhere;white-space:pre-line;line-height:1.35;">N/A</td>
    </tr>
    <tr>
      <td style="padding:4px 8px;vertical-align:top;width:38%;color:#111;word-break:break-word;overflow-wrap:anywhere;white-space:pre-line;line-height:1.35;">Total collected:</td>
      <td style="padding:4px 8px;vertical-align:top;color:#111;word-break:break-word;overflow-wrap:anywhere;white-space:pre-line;line-height:1.35;">1,500.00</td>
    </tr>
    <tr>
      <td style="padding:4px 8px;vertical-align:top;width:38%;color:#111;word-break:break-word;overflow-wrap:anywhere;white-space:pre-line;line-height:1.35;">Remark / Note:</td>
      <td style="padding:4px 8px;vertical-align:top;color:#111;word-break:break-word;overflow-wrap:anywhere;white-space:pre-line;line-height:1.35;">ভাঙারি বিক্রি</td>
    </tr>
    </table>

    <div style="display:flex;justify-content:space-between;align-items:flex-end;margin-top:38px;font-size:13px;gap:12px;">
      <div style="text-align:left;">
        <div style="border-top:0;padding-top:0;">Member signature</div>
        <div style="margin-top:18px;font-weight:600;">অফিস আয়</div>
      </div>
      
      <div style="text-align:right;">
        <div>Collector signature</div>
        <div style="margin-top:30px;border-top:1px solid #111;width:140px;height:1px;display:inline-block;" data-sig="placeholder"></div>
      </div>
    </div>
  </div>"
`;
